minor updates to fix the viewport scroll on mobile devices

--- a/assets/scss/globals/_body.scss
+++ b/assets/scss/globals/_body.scss
@@ -31,12 +31,15 @@ body {
 // }
 
 #viewport {
-  overflow: hidden;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
+
+  @include breakpoint(md) {
+    overflow: hidden;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+  }
 }
 
 .scrollbar-track {
