--- a/assets/scss/globals/_variables.scss
+++ b/assets/scss/globals/_variables.scss
@@ -21,7 +21,7 @@ $secondary-font: futura-pt, sans-serif;
 
 // Other site variables
 $radius: 5px;
-$mobile-header: 90px;
+$mobile-header: 85px;
 $desktop-header: 90px;
 
 // Scale and rhythm based on a major third
