--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -18,7 +18,7 @@
     opacity: 0;
 
     img {
-      width: 200px;
+      width: 160px;
 
       @include breakpoint(sm) {
         width: 100%;
